# TA

Lab3/rev1/: CMakeLists.txt
Lab3/rev1/.cache/clangd/index/: ast.cpp.3D2DB8B46D3B62FC.idx  ast.hpp.C54314FEA323F1B4.idx  driver.cpp.9AEC7CEC85ADA5EE.idx  driver.hpp.9DE65149F94A2DB2.idx  interpreter.cpp.24BC34ABFAAAB8E2.idx  interpreter.hpp.4DBCEE1DA3DD548F.idx  main.cpp.6CC2543927742670.idx  simulation.cpp.CD57E198E7D3FA25.idx  simulation.hpp.39EE83F22318101B.idx
Lab3/rev1/include/cellbot/: ast.hpp  driver.hpp  interpreter.hpp  simulation.hpp
Lab3/rev1/src/: ast.cpp  driver.cpp  interpreter.cpp  main.cpp  parser.y  scanner.l  simulation.cpp
